--- a/metrics-generator/templates/deployment.yaml
+++ b/metrics-generator/templates/deployment.yaml
@@ -16,14 +16,14 @@ spec:
     spec:
       affinity:
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
+          preferredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchExpressions:
                   - key: app
                     operator: In
                     values:
                       - {{ .Release.Name }}
-              topologyKey: kubernetes.io/hostname
+              topologyKey: failure-domain.beta.kubernetes.io/zone
       containers:
       - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         name: {{ .Release.Name }}
